gitops/resources/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/target: "1c8acaf6-e193-473b-9b29-bf0010874810.cfargotunnel.com"
    argocd.argoproj.io/sync-wave: "20"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-gateway
      namespace: kong
  hostnames:
    - "argocd.merveilles.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          port: 80
          weight: 1
